--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "deploy": "ng build --prod && angular-cli-ghpages --branch master",
     "json:server":"json-server --watch note1.json"
   },
   "private": true,
