--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "json:server":"json-server --watch note1.json"
+    "json:server": "json-server --watch note1.json"
   },
   "private": true,
   "dependencies": {
@@ -22,6 +22,7 @@
     "@angular/router": "~8.2.14",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "json-server": "^0.16.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
