--- a/angular.json
+++ b/angular.json
@@ -30,9 +30,7 @@
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "src/assets/js/mainpage.js"          
-            
-            ]
+              "src/assets/js/mainpage.js"                      ]
           },
           "configurations": {
             "production": {
